--- a/index.html
+++ b/index.html
@@ -141,14 +141,16 @@
                 <div class="container">
                     <h2>КАК РЕАЛЬНО РАБОТАЕТ<br>SMM В 2018</h2>
                     <div class="row">
-                        <div class="col-md-5 first">
+                        <div class="col-md-5">
+                            <span>1</span>
                             <p>Если у вас не уникальный контент – умная лента не будет показывать вас никому.</p>
                         </div>
                         <div class="col-md-7">
                             <p>В нашем агентстве во все тарифы включен наш собственный фото/видео продакшен и уникальный копирайтинг. Также мы создаем контент с самыми разнообразными форматами: gif, coub, boomerang, stories, короткие видеоролики и т.д.</p>
                         </div>
                         <div class="line"></div>
-                        <div class="col-md-5 second">
+                        <div class="col-md-5">
+                            <span>2</span>
                             <p>Если вы пытаетесь продать в лоб и не греете аудиторию, то вы всегда будете убыточны.</p>
                         </div>
                         <div class="col-md-7">
@@ -156,7 +158,8 @@
                             <p>Позвоните нам и узнайте, как мы работаем с блогерами и как создаем «трастовый контент» с реальным пользовательским опытом.</p>
                         </div>
                         <div class="line"></div>
-                        <div class="col-md-5 third">
+                        <div class="col-md-5">
+                            <span>3</span>
                             <p>Если вы думаете, что люди купят сами, то вы будете получать много запросов и 0 рублей выручки.</p>
                         </div>
                         <div class="col-md-7">
@@ -173,58 +176,75 @@
                         <div class="col-md-3">
                             <div class="row">
                                 <div class="col-md-6 pl-1">
-                                    <a href="">E-commerce</a>
-                                    <a href="">Музторг</a>
+                                    <a href="#1">E-commerce</a>
+                                    <a href="#2">Музторг</a>
                                 </div>
                                 <div class="col-md-6">
-                                    <a href="">Монотовары</a>
-                                    <a href="">Jucer</a>
-                                    <a href="">Colba</a>
+                                    <a href="#3">Монотовары</a>
+                                    <a href="#4">Jucer</a>
+                                    <a href="#5">Colba</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="row">
                                 <div class="col-md-6 pl-0">
-                                    <a href="">Услуги</a>
-                                    <a href="">Автоподбор</a>
+                                    <a href="#6">Услуги</a>
+                                    <a href="#7">Автоподбор</a>
                                 </div>
                                 <div class="col-md-6">
-                                    <a href="">PR и имидж</a>
-                                    <a href="">Норникель</a>
-                                    <a href="">Нордавиа</a>
+                                    <a href="#8">PR и имидж</a>
+                                    <a href="#9">Норникель</a>
+                                    <a href="#10">Нордавиа</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="row">
                                 <div class="col-md-6 pl-4 pr-4">
-                                    <a href="">B2B</a>
-                                    <a href="">SAP</a>
+                                    <a href="#11">B2B</a>
+                                    <a href="#12">SAP</a>
                                 </div>
                                 <div class="col-md-6">
-                                    <a href="">Кино</a>
-                                    <a href="" class="active">Hardcore</a>
+                                    <a href="#13">Кино</a>
+                                    <a href="#14">Hardcore</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="row">
                                 <div class="col-md-6 pl-0">
-                                    <a href="">Медицина</a>
-                                    <a href="">Новаклиник</a>
-                                    <a href="">Ментор</a>
+                                    <a href="#15">Медицина</a>
+                                    <a href="#16">Новаклиник</a>
+                                    <a href="#17">Ментор</a>
                                 </div>
                                 <div class="col-md-6 pl-0 pr-0">
-                                    <a href="">Оффлайн сети</a>
-                                    <a href="">Инсити</a>
+                                    <a href="#18">Оффлайн сети</a>
+                                    <a href="#19">Инсити</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="owl-carousel owl-theme">
-                        <div class="item"><img src="image/Bitmap.png" alt=""></div>
-                        <div class="item"><img src="image/Bitmap.png" alt=""></div>
+                        <div class="item" data-hash="1"><img src="image/Bitmap.png" alt=""></div>
+                        <div class="item" data-hash="2"><img src="image/monotovar.jpg" alt=""></div>
+                        <div class="item" data-hash="3"><img src="image/muztorg.png" alt=""></div>
+                        <div class="item" data-hash="4"><img src="image/ecommerce.jpg" alt=""></div>
+                        <div class="item" data-hash="5"><img src="image/Bitmap.png" alt=""></div>
+                        <div class="item" data-hash="6"><img src="image/monotovar.jpg" alt=""></div>
+                        <div class="item" data-hash="7"><img src="image/muztorg.png" alt=""></div>
+                        <div class="item" data-hash="8"><img src="image/ecommerce.jpg" alt=""></div>
+                        <div class="item" data-hash="9"><img src="image/Bitmap.png" alt=""></div>
+                        <div class="item" data-hash="10"><img src="image/monotovar.jpg" alt=""></div>
+                        <div class="item" data-hash="11"><img src="image/muztorg.png" alt=""></div>
+                        <div class="item" data-hash="12"><img src="image/ecommerce.jpg" alt=""></div>
+                        <div class="item" data-hash="13"><img src="image/Bitmap.png" alt=""></div>
+                        <div class="item" data-hash="14"><img src="image/monotovar.jpg" alt=""></div>
+                        <div class="item" data-hash="15"><img src="image/muztorg.png" alt=""></div>
+                        <div class="item" data-hash="16"><img src="image/ecommerce.jpg" alt=""></div>
+                        <div class="item" data-hash="17"><img src="image/Bitmap.png" alt=""></div>
+                        <div class="item" data-hash="18"><img src="image/monotovar.jpg" alt=""></div>
+                        <div class="item" data-hash="19"><img src="image/muztorg.png" alt=""></div>
                     </div>
                     <img class="white" src="image/Rectangle%209.svg" alt="9">
                 </div>
